2006-10-20  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_reduce): reduce function

	* src/number.c (dfsch_make_number_from_long): Smallnums allocated
	on heap

	* lib/regex.c (dfsch_regex_substrings): Dereferencing
	uninitialized pointer leads to undefined behavior :)

2006-10-15  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h (DFSCH_SYMBOL_CACHE): macro for defining symbol
	caching functions

	* src/dfsch.c (dfsch_eval_proc_impl): Added thread specific data 
	caching (I expect some performance gain from this, because
	get_thread_info() is (should be) slow)

2006-10-12  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): VERSION -> PACKAGE_VERSION (some versions of 
	something needs this)

2006-10-08  Ales Hakl  <ales at hakl dot net>

	* lib/regex.c: Throw exception when passed () instead of compiled 
	regex

	* src/dfsch.c (dfsch_list_p): list? function

2006-10-07  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_filter): filter function

2006-10-05  Ales Hakl  <ales at hakl dot net>

	* lib/regex.c (native_regex_substrings_once): removed REG_NOSUB

	* scm/test.scm (substrings-once): Additional test 

	* lib/regex.c: split core from code handling wrapper objects.
	Simple functions without need for compilation

	* scm/test.scm ("Regular expressions"): Tests for regex module

	* lib/regex.c (dfsch_regex_substrings): Fixed buffer overflow

	* src/repl.c (main): integrated regular expressions

	* lib/regex.c (dfsch_regex_substrings): substring matches

2006-10-04  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c (dfsch_threads_register): Fixed prototypes of 
	finalizers

	* lib/regex.c (dfsch_regex_register): Simple (match/no match) regular 
	expression support... and now with code :)
	(regex_finalizer): finalization of regex objects

	* scm/supermarket.scm: Exit after predefined number of iterations, 
	do not loop forever

2006-09-20  Ales Hakl  <ales at hakl dot net>
