@@ -1,3 +1,7 @@
+2006-10-21  Ales Hakl  <ales at hakl dot net>
+
+	* src/native.c (native_reduce): More Common Lisp like reduce.
+
 2006-10-20  Ales Hakl  <ales at hakl dot net>
 
 	* src/native.c (native_reduce): reduce function
